Tighten up navbar to prevent linebreak on some device widths

--- a/webroot/css/style.less
+++ b/webroot/css/style.less
@@ -338,6 +338,12 @@ textarea {
     font-size: 80%;
 }
 ul.nav {
+    > li {
+        > a {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+    }
     li.social {
         a {
             padding-right: 5px;
